# pulsara-agent

./: .env.example  .gitignore  APPROVAL_RESUME_SURVEY.zh.md  APPROVAL_RESUME_V1_IMPLEMENTATION.zh.md  ARCHITECTURE_DEBT_AUDIT.zh.md  CAPABILITY_SKILL_BUNDLE_SURVEY.zh.md  CAPABILITY_SKILL_RUNTIME_V1_IMPLEMENTATION.zh.md  CONVERSATION_RESUME_V1_DESIGN.zh.md  FAILED_ABORTED_RECOVERY_PR_IMPLEMENTATION_PLAN.zh.md  FAILED_ABORTED_RECOVERY_SURVEY.zh.md  GRAPH_DATABASE_VISION.zh.md  HOST_CORE_AND_INMEMORY_SUPERVISOR_PLAN.zh.md  HOST_USER_STOP_SURVEY.zh.md  LICENSE  LLM_RETRY_OPEN_SOURCE_SURVEY.zh.md  MEMORY_CANDIDATE_POOL_APPEND_ONLY_CONTRACT.zh.md  MEMORY_CANDIDATE_POOL_GOVERNANCE.zh.md  MEMORY_LIFECYCLE_SUPERSEDE_DESIGN.zh.md  MEMORY_LIFECYCLE_SUPERSEDE_V1_IMPLEMENTATION.zh.md  MEMORY_RECALL_EVERMEMOS_NEXT_DESIGN.zh.md  MEMORY_RECALL_FEASIBILITY_ANALYSIS.zh.md  MEMORY_RECALL_IMPLEMENTATION_GUIDE.zh.md  MEMORY_RECALL_MATURE_FRAMEWORKS_SURVEY.zh.md  MEMORY_RECALL_SYSTEM_SURVEY.zh.md  MEMORY_SCOPE_DOMAIN_V1_IMPLEMENTATION.zh.md  MEMORY_SYSTEM_FINAL_ARCHITECTURE.zh.md  MVP_AGENT_RUNTIME_DESIGN.zh.md  ONTOLOGY_HARD_CUT_MIGRATION_PLAN.zh.md  OPENAI_SDK_STREAMING_V1_IMPLEMENTATION.zh.md  PERMISSION_PR4_ASK_ON_REQUEST_IMPLEMENTATION.zh.md  PLAN_WORKFLOW_EVENT_ARCHITECTURE.zh.md  PULSARA_AUTHORITY_MATERIALIZATION_AND_LOSSLESS_TRANSCRIPT_PROJECTION_DESIGN.zh.md  PULSARA_BUNDLED_SKILLS_HERMES_LIKE_IMPLEMENTATION.zh.md  PULSARA_CAPABILITY_GATE_DECISION_EVENT_IMPLEMENTATION.zh.md  PULSARA_CLI_MCP_CAPABILITY_NEXT_IMPLEMENTATION.zh.md  PULSARA_CONTEXT_COMPACTION_MID_TURN_INLINE_DESIGN.zh.md  (+52 more)
(+817 files in other folders)
