[project]
name = "pulsara-agent"
version = "0.1.0"
description = "Pulsara backend runtime for a JSON-LD grounded agent memory MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
pulsara = "pulsara_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsara_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_llm: opt-in tests that call a configured real LLM provider",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
